[project]
name = "antigravity-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OleksiyM", email = "oleksiymaliovanyy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
